# gor-race

./: .gitignore  Anchor.toml  Cargo.toml  README.md  deployment.json  package-lock.json  package.json  tsconfig.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CowboyButton.tsx  CowboyCard.tsx  HorseSelector.tsx  LiveRaceMonitor.tsx  Navigation.tsx  RaceTrack.tsx  WalletProvider.tsx
frontend/hooks/: useGorRace.ts  useProfile.ts  useRaceManager.ts
frontend/lib/: constants.ts  program.ts
frontend/types/: gor_race.json  gor_race.ts
programs/gor-race/: Cargo.toml
programs/gor-race/src/: lib.rs
programs/gor-race/src/constants/: mod.rs
programs/gor-race/src/errors/: mod.rs
programs/gor-race/src/instructions/: claim_prize.rs  create_profile.rs  create_race.rs  execute_race.rs  initialize.rs  join_race.rs  mod.rs  update_platform_fee.rs  update_stats.rs  withdraw_platform_fees.rs
programs/gor-race/src/state/: mod.rs  platform_vault.rs  player_entry.rs  player_profile.rs  race.rs
programs/gor-race/src/utils/: mod.rs  random.rs
races/: race_1751507673.json  race_1751509221.json  race_1751509395.json  race_1751510633.json  race_1751511735.json  race_1751514532.json  race_1751539227.json  race_1751544318.json
scripts/: claim-prize.ts  create-profile.ts  create-race.ts  execute-race.ts  initialize.ts  join-race.ts  leaderboard.ts  profile.ts  update-stats.ts
tests/: gor-race.ts
