[package]
name = "gor-race"
version = "0.1.0"
description = "Horse Racing Betting Game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gor_race"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "1.17.0"
solana-program-test = "1.17.0"
